--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "prettify-min": "~1.0.4",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "html5shiv": "~3.7.3"
   }
 }
