project sites are now standalone fixing issue in make target build-assets: missing semicolon begun streamlining build process minor changes to inxs-common project index

--- a/etc/nginx/sites-available/inxs.es.coldrye.eu.project
+++ b/etc/nginx/sites-available/inxs.es.coldrye.eu.project
@@ -1,6 +1,6 @@
 server {
         listen 109.239.58.218:80;
-        root /var/www/sites/projects/inxs;
+        root /var/www/sites/inxs.es.coldrye.eu;
         index index.html;
         server_name inxs.es.coldrye.eu;
         location / {
